--- a/LaFiesta/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/LaFiesta/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,13 +12,29 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <label asp-for="Input.Email"></label>
+                <input asp-for="Input.Email" class="form-control" />
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                <label asp-for="Input.Voornaam"></label>
+                <input asp-for="Input.Voornaam" class="form-control" />
+                <span asp-validation-for="Input.Voornaam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Achternaam"></label>
+                <input asp-for="Input.Achternaam" class="form-control" />
+                <span asp-validation-for="Input.Achternaam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Geslacht"></label>
+                <input asp-for="Input.Geslacht" class="form-control" />
+                <span asp-validation-for="Input.Geslacht" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Geboortedatum"></label>
+                <input type="date" asp-for="Input.Geboortedatum" class="form-control" />
+                <span asp-validation-for="Input.Geboortedatum" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
