--- a/LaFiesta/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/LaFiesta/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using LaFiesta.Areas.Identity.Data;
+@inject SignInManager<CustomUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
