--- a/LaFiesta/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LaFiesta/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,16 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.Voornaam"></label>
+                <input asp-for="Input.Voornaam" class="form-control" />
+                <span asp-validation-for="Input.Voornaam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Achternaam"></label>
+                <input asp-for="Input.Achternaam" class="form-control" />
+                <span asp-validation-for="Input.Achternaam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -26,6 +36,16 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Geslacht"></label>
+                <input asp-for="Input.Geslacht" class="form-control" />
+                <span asp-validation-for="Input.Geslacht" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Geboortedatum"></label>
+                <input type="date" asp-for="Input.Geboortedatum" class="form-control" />
+                <span asp-validation-for="Input.Geboortedatum" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
