--- a/LaFiesta/Views/Artiest/Index.cshtml
+++ b/LaFiesta/Views/Artiest/Index.cshtml
@@ -5,3 +5,13 @@
 <div class="text-center">
     <h1 class="display-4">Artiest</h1>
 </div>
+
+
+<div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="~/img/skyline.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
