--- a/LaFiesta/Views/User/Delete.cshtml
+++ b/LaFiesta/Views/User/Delete.cshtml
@@ -9,7 +9,7 @@
 <h4>Are you sure you want to delete @Model.Voornaam @Model.Achternaam</h4>
 
 <form asp-action="Delete">
-    <input type="hidden" asp-for="UserId"/>
+    <input type="hidden" asp-route-id="@Model.Id"/>
     <input type="submit" value="Delete" class="btn btn-primary"/>
 </form>
 <a asp-action="Index">Back to List</a>
