--- a/LaFiesta/Views/Artiest/Index.cshtml
+++ b/LaFiesta/Views/Artiest/Index.cshtml
@@ -1,17 +1,27 @@
-﻿@{
+﻿@model LaFiesta.ViewModels.Lists.ListArtiestViewModel
+
+@{
     ViewData["Title"] = "Artiest";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Artiest</h1>
+    <h1 class="display-4">Artiesten</h1>
 </div>
 
-
-<!-- <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="~/img/skyline.jpg" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div> -->
+@foreach (var artiest in Model.Artiesten)
+{
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="~/images/artiesten/@artiest.Afbeelding" alt="afbeelding artiest">
+        <div class="card-body">
+            <h5 class="card-title">@Html.DisplayFor(modelItem => artiest.Voornaam) @Html.DisplayFor(modelItem => artiest.Achternaam)</h5>
+            <p class="card-text">
+                Geslacht: @Html.DisplayFor(modelItem => artiest.Geslacht)
+                <br>
+                Geboortedatum: @Html.DisplayFor(modelItem => artiest.Geboortedatum)
+                <br>
+                Genre: @Html.DisplayFor(modelItem => artiest.Genre)
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+}
