Aanmaken festival crud

--- a/LaFiesta/Views/Artiest/Edit.cshtml
+++ b/LaFiesta/Views/Artiest/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model LaFiesta.ViewModels.Edit.EditArtiestlViewModel
+﻿@model LaFiesta.ViewModels.Edit.EditArtiestViewModel
 
 @{
     ViewData["Title"] = "Artiest aanpassen";
