ticket made and running

--- a/LaFiesta/Views/Shared/_Layout.cshtml
+++ b/LaFiesta/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Artiest" asp-action="Index">Artiesten</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Ticket" asp-action="Index">Tickets</a>
+                        </li>
 					</ul>
                     <partial name="_LoginPartial" />
                 </div>
