All working + IdentityRoles added. Still need to fix the IdentityRoles working while logged in

--- a/LaFiesta/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LaFiesta/Areas/Identity/Pages/Account/Login.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn" style="background-color: #FF729F; color: white; text-align: center;">Log in</button>
                 </div>
                 <div class="form-group">
                     <p>
