--- a/LaFiesta/Views/User/Index.cshtml
+++ b/LaFiesta/Views/User/Index.cshtml
@@ -8,7 +8,9 @@
 <p>
 	<a asp-action="Create">Create New</a>
 </p>
-
+<p>
+	<a asp-action="GrantPermissions" class="btn" style="background-color: #FF729F; color: white; text-align: center;">Change Roles</a>
+</p>
 <table>
 	<thead>
 		<tr>
