--- a/LaFiesta/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/LaFiesta/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,29 +12,36 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email">@Html.DisplayNameFor(model => this.Model.Input.Email):</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Voornaam"></label>
+                <label asp-for="Input.Voornaam">@Html.DisplayNameFor(model => this.Model.Input.Voornaam):</label>
                 <input asp-for="Input.Voornaam" class="form-control" />
                 <span asp-validation-for="Input.Voornaam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Achternaam"></label>
+                <label asp-for="Input.Achternaam">@Html.DisplayNameFor(model => this.Model.Input.Achternaam):</label>
                 <input asp-for="Input.Achternaam" class="form-control" />
                 <span asp-validation-for="Input.Achternaam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Geslacht"></label>
-                <input type="radio" asp-for="Input.Geslacht" value="Man" class="form-control" />Man<br/>
-                <input type="radio" asp-for="Input.Geslacht" value="Vrouw" class="form-control" />Vrouw<br />
-                <input type="radio" asp-for="Input.Geslacht" value="Overige" class="form-control" />Overige<br />
+                <label asp-for="Input.Geslacht">@Html.DisplayNameFor(model => this.Model.Input.Geslacht):</label>
+                <br />
+                <label style="display: inline-flex; align-items: center;">
+                     <input style="width: auto; height: auto;" type="radio" asp-for="Input.Geslacht" value="Man" class="form-control" />&nbsp;Man
+                </label>
+                <label style="display: inline-flex; align-items: center; margin-left: 10px;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Input.Geslacht" value="Vrouw" class="form-control" />&nbsp;Vrouw
+                </label>
+                <label style="display: inline-flex; align-items: center; margin-left: 10px;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Input.Geslacht" value="Overige" class="form-control" />&nbsp;Overige
+                </label>
                 <span asp-validation-for="Input.Geslacht" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Geboortedatum"></label>
+                <label asp-for="Input.Geboortedatum">@Html.DisplayNameFor(model => this.Model.Input.Geboortedatum):</label>
                 <input type="date" asp-for="Input.Geboortedatum" class="form-control" />
                 <span asp-validation-for="Input.Geboortedatum" class="text-danger"></span>
             </div>
