--- a/LaFiesta/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LaFiesta/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,44 +13,50 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email">@Html.DisplayNameFor(model => this.Model.Input.Email):</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Voornaam"></label>
+                <label asp-for="Input.Voornaam">@Html.DisplayNameFor(model => this.Model.Input.Voornaam):</label>
                 <input asp-for="Input.Voornaam" class="form-control" />
                 <span asp-validation-for="Input.Voornaam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Achternaam"></label>
+                <label asp-for="Input.Achternaam">@Html.DisplayNameFor(model => this.Model.Input.Achternaam):</label>
                 <input asp-for="Input.Achternaam" class="form-control" />
                 <span asp-validation-for="Input.Achternaam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password"></label>
+                <label asp-for="Input.Password">@Html.DisplayNameFor(model => this.Model.Input.Password):</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label asp-for="Input.ConfirmPassword">@Html.DisplayNameFor(model => this.Model.Input.ConfirmPassword):</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Geslacht"></label>
-                <!--<input asp-for="Input.Geslacht" class="form-control" />-->
-				<input type="radio" asp-for="Input.Geslacht" value="Man" class="form-control" />Man<br/>
-                <input type="radio" asp-for="Input.Geslacht" value="Vrouw" class="form-control" />Vrouw<br />
-                <input type="radio" asp-for="Input.Geslacht" value="Overige" class="form-control" />Overige<br />
+                <label asp-for="Input.Geslacht">@Html.DisplayNameFor(model => this.Model.Input.Geslacht):</label>
+                <br />
+                <label style="display: inline-flex; align-items: center;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Input.Geslacht" value="Man" class="form-control" />&nbsp;Man
+                </label>
+                <label style="display: inline-flex; align-items: center; margin-left: 10px;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Input.Geslacht" value="Vrouw" class="form-control" />&nbsp;Vrouw
+                </label>
+                <label style="display: inline-flex; align-items: center; margin-left: 10px;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Input.Geslacht" value="Overige" class="form-control" />&nbsp;Overige
+                </label>
                 <span asp-validation-for="Input.Geslacht" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Geboortedatum"></label>
+                <label asp-for="Input.Geboortedatum">@Html.DisplayNameFor(model => this.Model.Input.Geboortedatum):</label>
                 <input type="date" asp-for="Input.Geboortedatum" class="form-control" />
                 <span asp-validation-for="Input.Geboortedatum" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn" style="background-color: #FF729F; color: white; text-align: center;">Register</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
