--- a/LaFiesta/Views/Shared/_Layout.cshtml
+++ b/LaFiesta/Views/Shared/_Layout.cshtml
@@ -31,17 +31,21 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Ticket" asp-action="Index">Tickets</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-controller="FestivalArtiest" asp-action="Index">Festival/Artiest</a>
-                                <a class="dropdown-item" asp-controller="TicketFestival" asp-action="Index">Ticket/Festival</a>
-                            </div>
+                        @if (this.User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" asp-controller="FestivalArtiest" asp-action="Index">Festival/Artiest</a>
+                                    <a class="dropdown-item" asp-controller="TicketFestival" asp-action="Index">Ticket/Festival</a>
+                                    <a class="dropdown-item" asp-controller="User" asp-action="Index">Gebruikers</a>
+                                </div>
 
-                        </li>
+                            </li>
+                        }
 					</ul>
-                    <partial name="_LoginPartial" />
-                </div>
+				</div>
+                <partial name="_LoginPartial" style="float: right" />
             </div>
         </nav>
     </header>
@@ -53,7 +57,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - LaFiesta - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - LaFiesta
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
