--- a/LaFiesta/Views/Ticket/Details.cshtml
+++ b/LaFiesta/Views/Ticket/Details.cshtml
@@ -8,9 +8,7 @@
 </p>
 <h3>@Model.Soort</h3>
 <p>Minimum leeftijd: @Model.Prijs</p>
-<p>Aantal: @Model.Aantal</p>
-<p>Datum: @Model.Datum</p>
-
-
+<p>Aantal: 1</p>
+<p>Datum: @Html.DisplayFor(Model => Model.Datum)</p>
 
 @Html.ActionLink("Terug", "Index")
