--- a/LaFiesta/Views/Ticket/Index.cshtml
+++ b/LaFiesta/Views/Ticket/Index.cshtml
@@ -6,39 +6,53 @@
 
 <div class="text-center">
 	<h1 class="display-4">Tickets</h1>
+	@if (this.User.Identity.IsAuthenticated && User.IsInRole("admin"))
+	{
+		<p>
+			<a asp-action="Create" class="btn" style="background-color: #FF729F; color: white;">Create New Ticket</a>
+		</p>
+	}
 </div>
-<p>
-	<a asp-action="Create">Create New Ticket</a>
-</p>
+
 <div class="row justify-content-center">
 	@foreach (var ticket in Model.Tickets)
 	{	
-				<div class="card m-2 col-3 p-0">
-					<img src="~/images/tickets/dummy.png" class="card-img-top" alt="ticket" style="height: 10rem;">
-					<div class="card-body" style="background-color: #AB87FF;">
-						<h5 class="card-title" style="color: white; text-align: center;">@Html.DisplayFor(modelItem => ticket.Soort)</h5>
-						<p class="card-text" style="color: white;">
-							<strong>Soort:</strong> 
-							<br>
-					@Html.DisplayFor(modelItem => ticket.Soort)
-							<br>
-							<strong>Prijs:</strong>
-							<br>
+		<div class="card m-2 col-3 p-0">
+			<img src="~/images/tickets/dummy.png" class="card-img-top" alt="ticket" style="height: 10rem;">
+			<div class="card-body" style="background-color: #AB87FF;">
+				<h5 class="card-title" style="color: white; text-align: center;">@Html.DisplayFor(modelItem => ticket.Soort)</h5>
+				<p class="card-text" style="color: white;">
+					<strong>Prijs:</strong>
+					<br>
 					@Html.DisplayFor(modelItem => ticket.Prijs)
-							<br>
-							<strong>Aantal:</strong> 
-							<br>
+					<br>
+					<strong>Aantal:</strong> 
+					<br>
 					@Html.DisplayFor(modelItem => ticket.Aantal)
-							<br>
-							<strong>Datum:</strong>
-							<br>
+					<br>
+					<strong>Datum:</strong>
+					<br>
 					@Html.DisplayFor(modelItem => ticket.Datum)
-						</p>
-					</div>
-					<div class="card-footer bg-primary" style="text-align: center; color: white;">
+				</p>
+			</div>
+			@if (this.User.Identity.IsAuthenticated)
+			{
+				@if (User.IsInRole("user") || User.IsInRole("admin"))
+					{<div class="card-footer bg-primary" style="text-align: center; color: white;">
+				
+						@if (User.IsInRole("admin"))
+						{
+							<div style="text-align: center;">
+								<a asp-action="Edit" asp-route-id="@ticket.Id" style="color: white;">Edit</a>
+								|
+								<a asp-action="Delete" asp-route-id="@ticket.Id" style="color: white;">Delete</a>
+							</div>
+						}
 						<a asp-action="Details" asp-route-id="@ticket.Id" class="btn" style="background-color: #FF729F; color: white;">Kopen</a>
 					</div>
-				</div>
+				}
+			}
+		</div>
 	}
 </div>
 
