--- a/LaFiesta/Views/Ticket/Create.cshtml
+++ b/LaFiesta/Views/Ticket/Create.cshtml
@@ -34,7 +34,7 @@
             <div class="form-group">
                 <label asp-for="Prijs">@Html.DisplayNameFor(model => this.Model.Prijs):</label>
                 <br />
-                <input asp-for="Prijs" class="form-control" />
+                <input asp-for="Prijs" type="double" class="form-control" />
                 <span asp-validation-for="Prijs" class="text-danger"></span>
             </div>
         </div>
