--- a/LaFiesta/Views/Ticket/Edit.cshtml
+++ b/LaFiesta/Views/Ticket/Edit.cshtml
@@ -33,8 +33,8 @@
             <div class="form-group">
                 <label asp-for="Prijs">@Html.DisplayNameFor(model => this.Model.Prijs):</label>
                 <br />
-                <input asp-for="Prijs" class="form-control" />
-                <span asp-validation-for="Prijs" class="text-danger"></span>
+                <input asp-for="Prijs" type="double" class="form-control" />
+                <span class="text-danger"></span>
             </div>
         </div>
         <div class="form-group ml-2">
