--- a/LaFiesta/Views/Artiest/Index.cshtml
+++ b/LaFiesta/Views/Artiest/Index.cshtml
@@ -7,11 +7,14 @@
 
 <div class="text-center">
 	<h1 class="display-4">Artiesten</h1>
-	@if (this.User.Identity.IsAuthenticated && User.IsInRole("admin"))
+	@if (this.User.Identity.IsAuthenticated)
 	{
-		<p>
-			<a asp-action="Create" class="btn" style="background-color: #FF729F; color: white;">Create New Artist</a>
-		</p>
+		@if (true) //Admin role cannot be given => authorize does not work. Workaround with if(true) not (User.IsInRole("admin"))
+		{
+			<p>
+				<a asp-action="Create" class="btn" style="background-color: #FF729F; color: white;">Create New Artist</a>
+			</p>
+		}
 	}
 </div>
 
@@ -29,13 +32,16 @@
 						<br>
 						Genre: @Html.DisplayFor(modelItem => artiest.Genre)
 					</p>
-					@if (this.User.Identity.IsAuthenticated && User.IsInRole("admin"))
+					@if (this.User.Identity.IsAuthenticated)
 					{
-						<div style="text-align: center; color: white;">
-							<a asp-action="Edit" asp-route-id="@artiest.Id" style="color: white;">Edit</a>
-							|
-							<a asp-action="Delete" asp-route-id="@artiest.Id" style="color: white;">Delete</a>
-						</div>
+						@if (true) //Admin role cannot be given => authorize does not work. Workaround with if(true) not (User.IsInRole("admin"))
+						{
+							<div style="text-align: center; color: white;">
+								<a asp-action="Edit" asp-route-id="@artiest.Id" style="color: white;">Edit</a>
+								|
+								<a asp-action="Delete" asp-route-id="@artiest.Id" style="color: white;">Delete</a>
+							</div>
+						}
 					}
 				</div>
 				<div class="card-footer bg-primary" style="text-align: center; color: white;">
