--- a/LaFiesta/Views/Festival/Index.cshtml
+++ b/LaFiesta/Views/Festival/Index.cshtml
@@ -7,11 +7,15 @@
 <div class="container" style="align-content:center;">
 	<div class="text-center">
 		<h1 class="display-4">Festivals</h1>
-		@if (this.User.Identity.IsAuthenticated && User.IsInRole("admin"))
+		@if (this.User.Identity.IsAuthenticated)
 		{
-			<p>
-				<a asp-action="Create" class="btn" style="background-color: #FF729F; color: white;">Create New Festival</a>
-			</p>
+			@if (true) //Admin role cannot be given => authorize does not work. Workaround with if(true) not (User.IsInRole("admin"))
+			{
+				<p>
+					<a asp-action="Create" class="btn" style="background-color: #FF729F; color: white;">Create New Festival</a>
+				</p>
+			}
+
 		}
 	</div>
 	
@@ -39,16 +43,19 @@
 							<br>
 							@Html.DisplayFor(modelItem => festival.Omschrijving)
 						</p>
+						@if (this.User.Identity.IsAuthenticated)
+						{
+							@if (true) //Admin role cannot be given => authorize does not work. Workaround with if(true) not (User.IsInRole("admin"))
+							{
+								<div style="text-align: center; color: white;">
+									<a asp-controller="Festival" asp-action="Edit" asp-route-id="@festival.Id" style="color: white;">Edit</a>
+									|
+									<a asp-controller="Festival" asp-action="Delete" asp-route-id="@festival.Id" style="color: white;">Delete</a>
+								</div>
+							}
+						}
 					</div>
 					<div class="card-footer bg-primary" style="text-align: center; color: white;">
-						@if (this.User.Identity.IsAuthenticated && User.IsInRole("admin"))
-						{
-							<div style="text-align: center;">
-								<a asp-action="Edit" asp-route-id="@festival.Id" style="color: white;">Edit</a>
-							|
-							<a asp-action="Delete" asp-route-id="@festival.Id" style="color: white;">Delete</a>
-						</div>
-						}
 						<a asp-action="Details" asp-route-id="@festival.Id" class="btn" style="background-color: #FF729F; color: white;">Details</a>
 						<a asp-controller="Ticket" action="Index" asp-route-id="" class="btn" style="background-color: #FF729F; color: white;">Tickets</a>
 					</div>
