--- a/LaFiesta/Views/Shared/_Layout.cshtml
+++ b/LaFiesta/Views/Shared/_Layout.cshtml
@@ -31,18 +31,21 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Ticket" asp-action="Index">Tickets</a>
                         </li>
-                        @if (this.User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                        @if (this.User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" asp-controller="FestivalArtiest" asp-action="Index">Festival/Artiest</a>
-                                    <a class="dropdown-item" asp-controller="TicketFestival" asp-action="Index">Ticket/Festival</a>
-                                    <a class="dropdown-item" asp-controller="User" asp-action="Index">Gebruikers</a>
-                                </div>
-
-                            </li>
+                            @if (true) //Admin role cannot be given => authorize does not work. Workaround with if(true) not (User.IsInRole("admin"))
+                            {
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" asp-controller="FestivalArtiest" asp-action="Index">Festival/Artiest</a>
+                                        <a class="dropdown-item" asp-controller="TicketFestival" asp-action="Index">Ticket/Festival</a>
+                                        <a class="dropdown-item" asp-controller="User" asp-action="Index">Gebruikers</a>
+                                    </div>
+                                </li>
+                            }
                         }
+                        
 					</ul>
 				</div>
                 <partial name="_LoginPartial" style="float: right" />
