--- a/LaFiesta/Views/User/Create.cshtml
+++ b/LaFiesta/Views/User/Create.cshtml
@@ -8,10 +8,10 @@
 
 <h4>Create a new account.</h4>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form asp-action="Create">
+    <div class="row mt-5">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
@@ -32,6 +32,8 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+        </div>
+        <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="ConfirmPassword"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
@@ -39,9 +41,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="Geslacht"></label>
-                <input type="radio" asp-for="Geslacht" value="Man" class="form-control" />Man<br />
-                <input type="radio" asp-for="Geslacht" value="Vrouw" class="form-control" />Vrouw<br />
-                <input type="radio" asp-for="Geslacht" value="Overige" class="form-control" />Overige<br />
+                <br />
+                <label style="display: inline-flex; align-items: center;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Geslacht" value="Man" class="form-control" />&nbsp;Man
+                </label>
+                <label style="display: inline-flex; align-items: center; margin-left: 10px;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Geslacht" value="Vrouw" class="form-control" />&nbsp;Vrouw
+                </label>
+                <label style="display: inline-flex; align-items: center; margin-left: 10px;">
+                    <input style="width: auto; height: auto;" type="radio" asp-for="Geslacht" value="Overige" class="form-control" />&nbsp;Overige
+                </label>
                 <span asp-validation-for="Geslacht" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,13 +58,13 @@
                 <input type="date" asp-for="Geboortedatum" class="form-control" />
                 <span asp-validation-for="Geboortedatum" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Create</button>
-        </form>
+        </div>
+        <div class="form-group ml-2">
+            <input type="submit" value="Create" class="btn" />
+            <a asp-action="Index" class="btn">Terug naar lijst</a>
+        </div>
     </div>
-</div>
-<div class="col-md-6 col-md-offset-2">
-    <a asp-action="Index">Back to list</a>
-</div>
+</form>
 
 @section Scripts{
     @{
