--- a/LaFiesta/Views/Festival/Details.cshtml
+++ b/LaFiesta/Views/Festival/Details.cshtml
@@ -24,5 +24,4 @@
 		</ul>
 	}
 </p>
-
-@Html.ActionLink("Terug", "Index")
+<a asp-action="Index" class="btn" style="background-color: #FF729F; color: white;">Terug</a>
