--- a/LaFiesta/Views/FestivalArtiest/Create.cshtml
+++ b/LaFiesta/Views/FestivalArtiest/Create.cshtml
@@ -35,8 +35,8 @@
                 </div>
             </div>
             <div class="form-group ml-2">
-            <input type="submit" value="Create" class="btn" />
-            <a asp-action="Index" class="btn">Terug naar lijst</a>
+            <input type="submit" value="Create" class="btn" style="background-color: #FF729F; color: white;" />
+            <a asp-action="Index" class="btn" style="background-color: #FF729F; color: white;">Terug naar lijst</a>
         </div>
         </form>
 </div>
