--- a/LaFiesta/Views/Ticket/Details.cshtml
+++ b/LaFiesta/Views/Ticket/Details.cshtml
@@ -11,4 +11,4 @@
 <p>Aantal: 1</p>
 <p>Datum: @Html.DisplayFor(Model => Model.Datum)</p>
 
-@Html.ActionLink("Terug", "Index")
+<a asp-action="Index" class="btn" style="background-color: #FF729F; color: white;">Terug</a>
