--- a/LaFiesta/Views/User/Delete.cshtml
+++ b/LaFiesta/Views/User/Delete.cshtml
@@ -6,10 +6,12 @@
 
 <h1>Delete</h1> 
 
-<h4>Are you sure you want to delete @Model.Voornaam @Model.Achternaam</h4>
+<h4>Are you sure you want to delete @Model.Voornaam @Model.Achternaam?</h4>
 
 <form asp-action="Delete">
     <input type="hidden" asp-route-id="@Model.Id"/>
-    <input type="submit" value="Delete" class="btn btn-primary"/>
+    <p>
+        <input type="submit" value="Delete" class="btn " style="background-color: #FF729F; color: white;" />
+        <a asp-action="Index" class="btn" style="background-color: #FF729F; color: white;">Back to List</a>
+    </p>
 </form>
-<a asp-action="Index">Back to List</a>
