--- a/LaFiesta/Views/Artiest/Delete.cshtml
+++ b/LaFiesta/Views/Artiest/Delete.cshtml
@@ -10,6 +10,8 @@
 
 <form asp-action="Delete">
     <input type="hidden" asp-route-id="@Model.Id" />
-    <input type="submit" value="Delete" class="btn btn-primary" />
+    <p>
+        <input type="submit" value="Delete" class="btn" style="background-color: #FF729F; color: white;" />
+        <a asp-action="Index" class="btn" style="background-color: #FF729F; color: white;">Back to List</a>
+    </p>
 </form>
-<a asp-action="Index">Back to List</a>
