--- a/LaFiesta/Views/FestivalArtiest/Index.cshtml
+++ b/LaFiesta/Views/FestivalArtiest/Index.cshtml
@@ -3,9 +3,13 @@
 @{
     ViewData["Title"] = "FestivalArtiest";
 }
-<p>
-    <a asp-action="Create" class="btn" style="background-color: #FF729F; color: white; text-align: center;">Create New FestivalArtiest</a>
-</p>
+
+<div class="text-center">
+    <h1 class="display-4">Festival/Artiest</h1>
+	<p>
+		<a asp-action="Create" class="btn" style="background-color: #FF729F; color: white; text-align: center;">Create New FestivalArtiest</a>
+	</p>
+</div>
 
 <table class="table table-bordered table-striped">
     <tr>
