--- a/LaFiesta/Views/Ticket/Edit.cshtml
+++ b/LaFiesta/Views/Ticket/Edit.cshtml
@@ -38,8 +38,8 @@
             </div>
         </div>
         <div class="form-group ml-2">
-            <input type="submit" value="Aanpassen" class="btn" />
-            <a asp-action="Index" class="btn">Terug</a>
+            <input type="submit" value="Aanpassen" class="btn" style="background-color: #FF729F; color: white;" />
+            <a asp-action="Index" class="btn" style="background-color: #FF729F; color: white;">Terug</a>
         </div>
     </div>
 </form>
