--- a/LaFiesta/Views/User/GrantPermissions.cshtml
+++ b/LaFiesta/Views/User/GrantPermissions.cshtml
@@ -3,6 +3,9 @@
 @{
 	ViewData["Title"] = "Grant Permissions";
 }
+<div class="text-center">
+	<h3 class="display-4">Change userrole</h3>
+</div>
 
 <form asp-action="GrantPermissions" asp-method="post">
 	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -14,5 +17,6 @@
 	</div>
 	<div class="form-group">
 		<input type="submit" value="Create" class="btn" style="background-color: #FF729F; color: white;" />
+		<a asp-action="Index" class="btn" style="background-color: #FF729F; color: white;">Back to List</a>
 	</div>
 </form>
